# duckworth-dugout

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  live-update.yml  migrate-articles.yml  scheduled-sync.yml  sync-deploy.yml
.playwright-cli/: page-2026-04-07T12-17-51-408Z.yml  page-2026-04-07T12-19-06-084Z.yml  page-2026-04-07T12-19-10-398Z.yml  page-2026-04-07T12-19-13-243Z.yml  page-2026-04-07T12-19-27-412Z.yml  page-2026-04-07T12-20-27-416Z.yml  page-2026-04-07T12-20-31-270Z.yml  page-2026-04-07T12-20-35-192Z.yml  page-2026-04-07T12-21-10-713Z.yml  page-2026-04-07T12-21-36-581Z.yml  page-2026-04-07T12-22-56-410Z.yml  page-2026-04-07T12-23-02-577Z.yml  page-2026-04-07T12-23-13-364Z.yml  page-2026-04-07T12-23-25-067Z.yml  page-2026-04-07T12-23-36-384Z.yml  page-2026-04-07T12-28-06-598Z.yml  page-2026-04-07T12-28-39-472Z.yml  page-2026-04-07T12-29-48-829Z.yml  page-2026-04-07T12-30-51-838Z.yml  page-2026-04-07T12-33-13-924Z.yml  page-2026-04-07T12-34-35-766Z.yml  page-2026-04-07T12-38-47-315Z.yml
cloudflare/: worker.js  wrangler.toml
data/fixtures/: fixtures-2026.json
data/sample/: briefing.json  caps.json  dossier.json  intel-log.json  meta.json  narratives.json  records.json  scenarios.json  schedule.json  ticker.json  wire.json
data/war-room/: briefing.json  caps.json  dossier.json  (+11 more)
documentation/: feature-backlog.md  pipeline-reference.md
frontend/: astro.config.mjs  package-lock.json  package.json
pipeline/: __main__.py  clock.py  config.py  context.py  models.py  snapshots.py  sync.py  writer.py
(+149 files in other folders)
